# LSF

./: CMakeLists.txt  MainFrame.cpp  MainFrame.h  README.md  TurtleGraph.cpp  TurtleGraph.h  WordIterator.h  main.cpp
